--- a/src/app/components/modules/Header/styles.scss
+++ b/src/app/components/modules/Header/styles.scss
@@ -114,9 +114,16 @@
 span.Header__hamburger.toggle-menu {
     width: 1rem;
     height: 1rem;
-    margin-left: 0.25rem;
-    cursor: pointer;
     @include hamburger();
+    // This margin is to prevent user avatar overlapping the hamburger in the header.
+    margin-left: 0.25rem;
+    @include MQ(S) {
+        margin-left: 0.5rem;
+    }
+    @include MQ(M) {
+        margin-left: 0.75rem;
+    }
+    cursor: pointer;
     &::after {
       transition: 0.2s all ease-in-out;
       @include themify($themes) {
